[should notify upstream] modified popcorn-complete to so that seek() followed pause() would trigger pause event.   youtube previously had a bug where seek() would trigger pause() as sideeffect,   and popcornjs made workarounds to solve that,   but bug has been solved by youtube so workaround is not needed anymore, otherwise   it would create a problem where seek() followed by pause() would not trigger pause event.
expanded timeline should move itself dynamically when out of bounds
when playing,clicking on any space on timeline should move scrubber to that spot
when paused, clicking on any space on timeline should move scrubber to that spot

--- a/app/assets/stylesheets/editor.css
+++ b/app/assets/stylesheets/editor.css
@@ -1,4 +1,4 @@
-#timeline {
+#timeline_container {
   	padding: 10px;  
 	width: 700px;
 	height: 150px;
@@ -8,19 +8,23 @@
 	border: solid 1px black ;
 }
 
-#timeline #summary {
+#timeline_container #summary {
 	height: 35px;
 	border: solid 1px black ;
 	position: relative;
 	overflow: hidden;
 }
 
-#timeline #expanded {
+#timeline_container #expanded {
 	height: 100px;
 	margin-top: 10px;
 	border: solid 1px black ;
 	position: relative;
 	overflow: hidden;
+}
+
+.filler {
+	height: inherit;
 }
 
 .scrubber {
@@ -37,6 +41,7 @@
 }
 
 .track {
+	height: inherit;
 	background-color: cadetblue;
 	position: absolute;
 }
